<resources>
    <string name="app_name">Palembang Iconic Food</string>
    <string name="foods_name">Nama Makanan</string>
    <string name="description">Deskripsi</string>
    <string name="recipe">Resep Sederhana</string>
    <string name="list">List</string>
    <string name="profile_name">M. Bintang Khadafi</string>
    <string name="profile_email">bintangkhadafi2772@gmail.com</string>
    <string name="share">Share Article</string>
    <string name="about_me">About Me</string>
    <string-array name="data_name">
        <item>Pempek</item>
        <item>Tekwan</item>
        <item>Burgo</item>
        <item>Laksan</item>
        <item>Mie Celor</item>
        <item>Nasi Minyak</item>
        <item>Gulo Puan</item>
        <item>Pindang Patin</item>
        <item>Godo-Godo</item>
        <item>Lakso</item>
    </string-array>
    <string-array name="data_description">
        <item>Pempek atau empek-empek adalah makanan yang terbuat dari daging ikan yang digiling lembut yang dicampur tepung kanji atau tepung sagu, serta komposisi beberapa bahan lain seperti telur, bawang putih yang dihaluskan, penyedap rasa, dan garam.</item>
        <item>Tekwan adalah makanan khas Palembang yang terbuat dari campuran daging ikan dan tapioka, yang dibentuk berupa bulatan kecil-kecil, dan disajikan dalam kuah udang dengan rasa yang khas.</item>
        <item>Burgo dapat digolongkan sebagai makanan kecil dan bukan makanan utama. Makanan ini dapat ditemui di warung-warung khas Palembang dan biasanya disajikan bersama dengan makanan lain seperti lakso, laksan, dan celimpungan. </item>
        <item>Laksan yang merupakan salah satu makanan khas Kota Palembang, Sumatera Selatan, menjadi buruan warga untuk disajikan sebagai menu berbuka puasa.</item>
        <item>Disebut dengan Mi Celor sebab mi disajikan dengan cara dicelor (diseduh), kemudian mi dicampur kuah santan dan kaldu udang yang kental dan gurih dan disajikan dengan pelengkap seperti telur rebus, tauge, dan kucai.</item>
        <item>Nasi minyak adalah masakan khas Jambi dan Sumatra Selatan berupa olahan nasi yang dimasak dengan minyak samin dan rempah-rempah khas Nusantara, India dan Timur-Tengah.</item>
        <item>Gulo puan ini merupakan makanan manis yang terbuat dari gula dan susu kerbau. Konon, jika melihat sejarahnya, dulu kudapan lezat ini hanya dapat dinikmati oleh bangsawan serta mereka yang sudah selesai menunaikan ibadah haji saja.</item>
        <item>Pindang patin adalah kuliner khas penggugah selera yang berasal dari Palembang. Kekhasannya terletak pada cita rasanya yang lebih berwarna. Tentunya beda dengan pindang-pindang yang ditemukan di pulau Jawa.</item>
        <item>Godo-godo, bukan gado-gado, merupakan kudapan khas Sumatera Selatan yang memanfaatkan daging udang untuk bahan utama makanan.</item>
        <item>Lakso adalah hidangan mie gurih khas Indonesia yang disajikan dalam kuah berbahan santan kelapa berwarna kekuningan yang gurih, biasanya dicampur dengan ikan, dan ditaburi bawang goreng.</item>
    </string-array>
    <string-array name="data_description_detail">
        <item>Pempek atau empek-empek adalah makanan yang terbuat dari daging ikan yang digiling lembut yang dicampur tepung kanji atau tepung sagu, serta komposisi beberapa bahan lain seperti telur, bawang putih yang dihaluskan, penyedap rasa, dan garam. Pempek biasanya disajikan dengan kuah yang disebut cuka yang memiliki rasa asam, manis, dan pedas. Pempek merupakan makanan khas Palembang, meskipun hampir semua daerah di Sumatra Selatan, Jambi, Lampung, Kepulauan Bangka Belitung, dan Bengkulu juga memproduksinya.\n\nPempek dapat ditemukan dengan mudah di Kota Palembang, beberapa daerah Sumatra Selatan hingga provinsi Bengkulu; ada yang menjualnya di restoran, ada yang di pinggir jalan, dan pula yang dipikul. Pada tahun 1880-an, penjual biasa memikul satu keranjang penuh pempek sambil berjalan kaki berkeliling menjajakan dagangannya.</item>
        <item>Tekwan adalah makanan khas Palembang yang terbuat dari campuran daging ikan dan tapioka, yang dibentuk berupa bulatan kecil-kecil, dan disajikan dalam kuah udang dengan rasa yang khas. Biasanya pelengkap tekwan adalah sohun, irisan bengkoang dan jamur, serta ditaburi irisan daun bawang, seledri, dan bawang goreng. Tekwan berasal dari kata "Berkotek Samo Kawan", yang dalam bahasa Palembang artinya duduk mengobrol bersama teman.\n\nTekwan ini mungkin sekilas dapat disebut sebagai bakso. Perpaduan antara adonan kenyal yang dicampur dengan kuah udang membuat rasa dari makanan ini menyegarkan. Campuran bihun, jamur kuping, daun bawang, dan bawang goreng pada kuahnya memberikan sensasi lebih lezat lagi.</item>
        <item>Burgo adalah makanan khas dari Palembang. Pada tahun 2021 burgo sudah ditetapkan oleh Kementrian Pendidikan dan Kebudayaan (KEMDIKBUD) dengan nomor pendaftaran 202101401 sebagai Warisan Budaya Tak Benda (WBTB) yang berasal dari Provinsi Sumatera Selatan. Burgo dapat digolongkan sebagai makanan kecil dan bukan makanan utama. Makanan ini dapat ditemui di warung-warung khas Palembang dan biasanya disajikan bersama dengan makanan lain seperti lakso, laksan, dan celimpungan.\n\nBurgo akan terasa lebih nikmat dimakan jika dalam keadaan hangat, sehingga warung-warung biasanya menjajakan makanan ini dengan kompor untuk menghangatkannya. Bahan utama burgo adalah setengah kilogram beras, sagu, setengah kilogram ikan gabus, dan air. Selain itu, proses pembuatan burgo juga memakai bumbu-bumbu tambahan, seperti lengkuas, ketumbar, biji kemiri, kencur, temu kunci, bawang merah, bawang putih, gula pasir, daun salam, dan sedikit kapur sirih.</item>
        <item>Laksan yang merupakan salah satu makanan khas Kota Palembang, Sumatera Selatan, menjadi buruan warga untuk disajikan sebagai menu berbuka puasa. Dengan kuah kental dari santan kelapa yang dicampur ebi serta bawang goreng, laksan sangat nikmat digunakan sebagai makanan utama saat berbuka puasa. Makanan laksan sebetulnya hampir sama dengan pempek. Jika pempek dimakan dengan menggunakan cuko, maka laksan menggunakan sari pati kelapa berupa santan yang disajikan sebagai kuahnya.</item>
        <item>Mi Celor adalah hidangan mi yang berasal dari kota Palembang, Sumatra Selatan, Indonesia. Kata Celor dalam bahasa Palembang bermakna direndam kedalam air panas (seduh), itulah sajian ini disebut dengan Mi Celor sebab mi disajikan dengan cara dicelor (diseduh), kemudian mi dicampur kuah santan dan kaldu udang yang kental dan gurih dan disajikan dengan pelengkap seperti telur rebus, tauge, dan kucai. Ukuran mi yang digunakan lebih besar daripada mi pada umumnya, seperti Mi Aceh atau Udon Jepang.</item>
        <item>Nasi minyak adalah masakan khas Jambi dan Sumatra Selatan berupa olahan nasi yang dimasak dengan minyak samin dan rempah-rempah khas Nusantara, India dan Timur-Tengah. Sekilas nasi minyak terlihat seperti nasi kebuli dan Nasi Biryani, hal ini dikarenakan nasi minyak merupakan masakan Jambi dan Palembang yang memang mendapat pengaruh dari Timur-Tengah dan anak benua India tempat nasi kebuli dan nasi biryani itu berasal. Nasi minyak biasanya disajikan bersama pelbagai pelengkap, seperti Gulai tepek ikan, daging malbi, sate pentol, ayam goreng, acar ketimun, kismis dan sambal nanas.\n\nNasi minyak memiliki cita rasa gurih khas rempah timur tengah dan India dengan aroma bumbu yang kuat. Nasi minyak biasanya disajikan pada acara-acara tertentu saja, seperti pesta perkawinan, syukuran, Idulfitri, Iduladha, dan sebagai sajian istimewa di bulan Ramadan. Nasi minyak banyak ditemukan di seluruh Provinsi Sumatra Selatan dan juga di Provinsi Jambi.</item>
        <item>Gulo puan ini merupakan makanan manis yang terbuat dari gula dan susu kerbau. Konon, jika melihat sejarahnya, dulu kudapan lezat ini hanya dapat dinikmati oleh bangsawan serta mereka yang sudah selesai menunaikan ibadah haji saja.Banyak tempat yang dapat Anda kunjungi untuk membeli seporsi gulo puan ini. Mulai dari para penjual kaki lima sampai toko-toko oleh-oleh kekinian.</item>
        <item>Pindang patin adalah kuliner khas penggugah selera yang berasal dari Palembang. Kekhasannya terletak pada cita rasanya yang lebih berwarna. Tentunya beda dengan pindang-pindang yang ditemukan di pulau Jawa. Kuliner khas Palembang ini memiliki rasa bumbu yang berkesan. Sepintas pindang ikan patin terlihat tidak berbeda dengan pindang ikan bandeng yang berasal dari Betawi. Perbedaan terdapat pada kuahnya, dimana pindang ikan patin tidak sepekat pindang Betawi.\n\nDalam proses pembuatannya, pindang Palembang tidak hanya terpaku pada penggunaan ikan patin, tetapi dapat juga diganti oleh ikan lain seperti ikan belida, ikan gabus, ikan baung, bahkan udang, selama ikan tersebut adalah ikan yang berasal dari sungai. Kuah pada panganan pindang ikan patin rasanya asam, pedas, dan manis dengan aroma yang khas dan berwarna. Hal ini terjadi karena dalam kuahnya terdapat daun kemangi, irisan tomat hijau, serta irisan nanas.</item>
        <item>Godo-godo, bukan gado-gado, merupakan kudapan khas Sumatera Selatan yang memanfaatkan daging udang untuk bahan utama makanan. Makanan Sumatera Selatan satu ini kerap dikenal juga sebagai empek godo. Campuran kuah cuka memberikan sensasi lezat. Anda dapat mudah menemukannya di pedagang kaki lima saja. Kudapan khas Sumatera Selatan tidak semuanya bernuansa ikan, ada yang bahannya udang.</item>
        <item>Lakso adalah hidangan mie gurih khas Indonesia yang disajikan dalam kuah berbahan santan kelapa berwarna kekuningan yang gurih, biasanya dicampur dengan ikan, dan ditaburi bawang goreng. Hidangan ini adalah salah satu makanan khas daerah Palembang, Provinsi Sumatera selatan, Indonesia.\n\nLakso secara sederhana sering digambarkan sebagai laksa bergaya Palembang. Namun, sebenarnya makanan ini sangat berbeda dari laksa yang umum ditemukan di negara tetangga seperti Malaysia dan Singapura. Lakso sangat mirip dengan burgo, meskipun burgo adalah panekuk dari tepung beras yang dilipat, dipotong, dan dihidangkan dalam kuah santan yang berwarna putih. Di Palembang, lakso bersama dengan burgo adalah pilihan jajanan yang populer untuk sarapan.</item>
    </string-array>
</resources>