<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutPageActivity"
    android:fillViewport="true"
    android:background="@color/main_green">

        <RelativeLayout
            android:id="@+id/rl_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/about_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/about_me" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_below="@id/about_me"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/bintang_khadafi"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_below="@id/profile_image"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:text="@string/profile_name" />

                <TextView
                    android:id="@+id/profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_name"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/profile_email" />

                <TextView
                    android:id="@+id/copyright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_email"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="600dp"
                    android:text="@string/profile_email"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
        </RelativeLayout>

</ScrollView>